# fargocpt

./: .gitignore  ChangeLog.md  ChangeLog.txt  Dockerfile  INSTALL  README.md  README.org  config.yml  deprecated_parameters.yml  disklab_model.py  extract_parameter_description.ipynb  foo.json  in.json  ini2json.py  ini2yml.py  macos-source.env  new_parameters.yml  par2json.py  parameters.md  parameters.md~origin_master  parameters.yml  paramter_table.py  replace_parameter_names.py  requirements.txt  run_fargo  run_fargo.py  run_fargo.sh  test.json  testconfig.yml
.devcontainer/: Dockerfile  devcontainer.json
Tools/: .gitignore  binac_start.sh  chprm.py  clone_at_timestep.py  compare_binary_output.py  create_star_file.py  extract_particle.cpp  extract_profile.cpp  fargo2gnuplot.cpp  format.sh  get_polytropic_constants.py  git_archive_branch.sh  ini2yml.py  inspect_tab_file.py  merge1d.cpp  monotone_checker.py  overview.py  polargrid_generator.cpp  profiling_callgrind.sh  run_valgrind.sh  thin.py
Tools/param_names/: config.yml  extract_parameter_description.ipynb  parameter_table.py  parameters.md  parameters.yml  parameters_nbody.md  parameters_nbody.yml  process_params.ipynb  replace_parameter_names.py  update_docs_source.sh
Tools/read_data/: read1D.py  read_gasMassFlow1D.py  read_par_file.py
docker/: Dockerfile  Dockerfile-alpine  Dockerfile-devel  build-devel.sh  build.sh  entrypoint.sh  run.sh  shell-devel.sh  shell.sh
docs/: .buildinfo  TW.md  acknowledgements.html  citations.html  conservative_viscosity_update.org  genindex.html  implicit_viscosity.org  index.html  input.html  licence.html  objects.inv  output.html  parameters.html  run_livereload.py  search.html  searchindex.js  setup_sphinx.sh  text_output_files.org  units.html  usage.html
docs-source/: TW.org  energy_update.html
docs-source/source/: citations.md  conf.py
docs/Code architecture/: building the code.html  coding conventions.html  config files.html  config.html  data structure.html  dependencies.html  index.html  launching the code.html  linux signals.html  logging.html  output.html  parallelization.html  program flow.html  units and constants.html
docs/Examples/: 100_Quickstart.html  101_DiskPlots.html  200_Output_Structure.html  210_DataLoading_Automatic.html  220_DataLoading_Manual.html  300_Bootstrap_Simulation.html  301_Adjusting_Inditial_Conditions.html  400_Custom_Initial_Conditions.html  401_Selfgravity.html  500_Movie.html  index.html
docs/Numerics/: N-body.html  accretion.html  aspect ratio.html  boundary conditions.html  conservative_viscosity_update.html  energy_update.html  frame of reference.html  gravity.html  hydro simulations.html  implicit_viscosity.html  index.html  opacities.html  particles.html  radiative processes.html  self-gravity.html  time step calculation.html  variable gamma.html  viscosity.html  wave damping.html
docs/Tests/: dust_diffusion.html  index.html
docs/_sources/: index.md.txt  input.md.txt  licence.md.txt  output.md.txt  parameters.md.txt
docs/old/: energy_update.org  implicit_viscosity.org  text_output_files.org
docs/scripts/: run_livereload.py  serve.sh  setup_sphinx_venv.sh
docs/source/: acknowledgements.md  conf.py  index.md
docs_source/: Makefile  README.md  requirements.txt  scaling.py  toexplain.txt
examples/: 100_Quickstart.ipynb  101_DiskPlots.ipynb  200_Output_Structure.ipynb  210_DataLoading_Automatic.ipynb  220_DataLoading_Manual.ipynb  300_Bootstrap_Simulation.ipynb  301_Adjusting_Inditial_Conditions.ipynb  400_Custom_Initial_Conditions.ipynb  400_Selfgravity.ipynb  401_Selfgravity.ipynb  402_Dust.ipynb  500_Movie.ipynb  600_Interpolation.ipynb  FargoCPT_Quickstart.ipynb  config.yml
in/: Nep.cfg  OY_Car.cfg  ROT_SV0.par  SV0.par  SV1.par  stockholm_MJ_invisc.par  stockholm_MN_invisc.par  stockholm_MN_visc.par
legacy/: mp.pro
python/: data.py  load_scalar.py  pyproject.toml  run.py
python_module/: pyproject.toml
python_module/fargocpt/: __init__.py  _command_line_.py  config.py  data.py  overview.py  run.py
setups/: PDS70.yml  single_planet_no_disk.par  star_planet.cfg
src/: .clang-format  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  Doxyfile  Force.c  Force.cpp  Force.h  Interpret.cpp  Interpret.h  LowTasks.cpp  LowTasks.h  Pframeforce.c  Pframeforce.cpp  Pframeforce.h  Planet.c  Psys.c  RungeKunta.c  RungeKutta.cpp  RungeKutta.h  SideEuler.cpp  SideEuler.h  SourceEuler.cpp  SourceEuler.h  Stockholm.c  Stockholm.cpp  Stockholm.h  Theo.c  Theo.cpp  Theo.h  TransportEuler.c  TransportEuler.cpp  TransportEuler.h  accretion.cpp  accretion.h  arch.defs  axilib.cpp  axilib.h  backtrace.cpp  backtrace.h  boundary_conditions.cpp  (+120 more)
src/boundary_conditions/: 1legacy_azimuthal_velocity.cpp  1legacy_legacy.cpp  1legacy_spreading_ring.cpp  azimuthal_velocity.cpp  balanced.cpp  basic.cpp  basic.h  boundary_conditions.cpp  boundary_conditions.h  boundary_layer.cpp  center_of_mass.cpp  config.cpp  custom.cpp  damping.cpp  diskmodel.cpp  initial_value.cpp  keplerian2d.cpp  keplerian_azimuthal.cpp  keplerian_radial.cpp  legacy.cpp  mass_overflow.cpp  outflow.cpp  outflow_reflective.cpp  prescribed.cpp  reference.cpp  reference_value.cpp  reflecting.cpp  spreading_ring.cpp  viscous.cpp  viscous_outflow.cpp  zero_gradient.cpp  zero_shear.cpp
src/nbody/: planet.cpp  planet.h  planetary_system.cpp  planetary_system.h
src/particles/: dust_diffusion.cpp  dust_diffusion.h  particle.cpp  particle.h  particles.cpp  particles.h
src/random/: jsf.hpp  random.cpp  random.h  random_wrapper.cpp  random_wrapper.h  randutils.hpp  ziggurat.hpp
src/rebound/: CMakeLists.txt  Makefile  Makefile.defs  integrator_ias15.c  integrator_whfast.c  rebound.c  rebound.h
src/units/: Makefile  README.md  unit_definitions.hpp  units.hpp  units_conversion_maps.hpp  units_decl.hpp
src/viscosity/: artificial_viscosity.cpp  artificial_viscosity.h  viscosity.cpp  viscosity.h  viscous_radial_speed.cpp  viscous_radial_speed.h
src/yaml-cpp/: Makefile  README.md
test/: .gitignore  run_test.py  run_tests.sh
twam/: README.md  make.sh  queue.sh  start.sh
(+461 files in other folders)
